syntax = "proto3";
package secret;
option go_package = "/pb";

service Secrets {
  rpc CreateSecret (CreateSecretRequest) returns (CreateSecretResponse) {}
  rpc GetSecret (GetSecretRequest) returns (GetSecretResponse) {}
  rpc ListSecrets (ListSecretsRequest) returns (ListSecretsResponse){}
  rpc DeleteSecret (DeleteSecretRequest) returns (DeleteSecretResponse) {}
}

message listData {
   bytes name = 1;
  string secret_id =2;
}

message CreateSecretRequest {
  bytes name = 1;
  bytes data = 2;

}

message CreateSecretResponse{
 string secret_id=1;
 string status=2;
}

message GetSecretRequest {
  string secret_id =1;
}

message ListSecretsRequest{

}
message ListSecretsResponse{
  string status=1;
  repeated listData data=2;

}

message GetSecretResponse {
  string status = 1;
  bytes name = 2;
  bytes data = 3;
}

message DeleteSecretRequest {
  string secret_id = 1;
}

message DeleteSecretResponse {
  string status = 1;
}
